--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Starter project for an ES6 RESTful Express API",
   "main": "dist",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-2\"",
+    "build": "babel src -s -D -d dist --presets es2015,stage-2",
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src"
@@ -24,8 +24,7 @@
       "no-unused-vars": 1
     }
   },
-  "repository": "developit/express-es6-rest-api",
-  "author": "Jason Miller <jason@developit.ca>",
+  "author": "Tushar Nimje",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.3",
@@ -39,7 +38,7 @@
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^3.1.1",
     "nodemon": "^1.9.2"
   }
