--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Starter project for an ES6 RESTful Express API",
   "main": "dist",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-2\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-2",
+    "dev": "nodemon -w src --exec \"babel-node src\"",
+    "build": "babel src -s -D -d dist",
     "start": "node dist",
     "prestart": "npm run -s build",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest --runInBand"
   },
   "author": "Tushar Nimje",
   "license": "MIT",
@@ -21,12 +22,21 @@
     "morgan": "1.8.0"
   },
   "devDependencies": {
-    "babel-cli": "6.9.0",
-    "babel-core": "6.9.0",
-    "babel-eslint": "10.0.1",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-stage-2": "6.24.1",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-eslint": "^10.0.1",
     "eslint": "5.8.0",
-    "nodemon": "1.9.2"
+    "jest": "^24.5.0",
+    "nodemon": "1.9.2",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "verbose": true
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
