--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "author": "Tushar Nimje",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nimjetushar/express-es6-rest-api.git"
+  },
   "dependencies": {
     "body-parser": "1.18.3",
     "compression": "1.7.4",
