--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-es6-rest-api",
   "version": "0.3.0",
-  "description": "Starter project for an ES6 RESTful Express API",
+  "description": "Boilerplate for rest api using nodejs, express",
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src\"",
